<resources>
    <string name="app_name">Colby Sample</string>
    <string name="search">Search</string>
    <string name="love">Love</string>
    <string name="like">Like</string>
    <string name="hate">Hate</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rating">RatingActivity</string>
</resources>
